# PythoniC

./: CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt
examples/Filter/: Filter.cpp
examples/IsIn/: IsIn.cpp
examples/Map/: Map.cpp
examples/Ranges/: CMakeLists.txt  Ranges.cpp
examples/Reduce/: Reduce.cpp
examples/Splice/: Splice.cpp
examples/String/Split/: Split.cpp
examples/Strings/Join/: Join.cpp
examples/Strings/Replace/: Replace.cpp
examples/Strings/Strip/: Strip.cpp
include/: Range.h
include/PythoniC/: PythoniC.hpp
include/PythoniC/Object/: Range.hpp
include/PythoniC/Util/: Filter.hpp  IsIn.hpp  Map.hpp  Reduce.hpp  Splice.hpp  Strings.hpp
include/PythoniC/Util/String/: Split.hpp
include/PythoniC/Util/Strings/: Join.hpp  Replace.hpp  Split.hpp  Strip.hpp
src/: PythoniC.cpp  Range.cpp
src/Object/: Range.cpp
src/Util/: Filter.cpp  Map.cpp  Reduce.cpp
src/Util/Strings/: Replace.cpp  Split.cpp  Strip.cpp
